Closed Bug 1430216 Opened 6 years ago Closed 6 years ago

Bitmap font faces fail to render on Linux [was: Latest nightly (2018-01-12) does not properly render many sites]

Categories

(Core :: Graphics: Text, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla59
Tracking Status
firefox-esr52 --- unaffected
firefox57 --- unaffected
firefox58 --- unaffected
firefox59 --- fixed

People

(Reporter: etrapani, Assigned: jfkthame)

References

Details

(Keywords: nightly-community, regression)

Attachments

(5 files, 1 obsolete file)

Attached image Correct old.wordsolver.net (2018-01-11) (obsolete) —
Many sites are incorrectly shown. Find the screenshots attached. They are taken with the nightly from 2018-01-11-10-07-22 (they are alright) and today's nightly 2018-01-12 (they are wrong).
Attachment #8942298 - Attachment is obsolete: true
See the top line, where the page's menu should be.
Summary: Latest nightly does not properly render many sites → Latest nightly (2018-01-12) does not properly render many sites
mozregression says the regregression range is: ed7d7016, ec70d962

https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=ed7d701658926c75bff77885d3258b2860d6dc3b&tochange=56f88b76d0fd6b0b207de727891610132e9a67a4

The problem seems to be related to Bug 1428826 (I'm running Debian)
Has Regression Range: --- → yes
Keywords: regression
Ah, drat.... the patch there doesn't play well with bitmap font faces. So if your system is configured such that a lot of content renders with bitmap fonts, things break pretty badly. :(

We'll need to use the `advance` field of the glyph slot in that case.
Assignee: nobody → jfkthame
Component: General → Graphics: Text
Product: Firefox → Core
I can reproduce the failure here with a testcase using Terminus, for example, although I don't see it on typical web pages with my Ubuntu font configuration. Anyhow, this fixes the rendering and brings back the bitmap glyphs.
Attachment #8942445 - Flags: review?(lsalzman)
Summary: Latest nightly (2018-01-12) does not properly render many sites → Bitmap font faces fail to render on Linux [was: Latest nightly (2018-01-12) does not properly render many sites]
Attachment #8942445 - Flags: review?(lsalzman) → review+
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/7f9d938235e7
For non-scalable fonts, we can't use the linearHoriAdvance field from the glyph slot; use the advance field instead to get proper metrics. r=lsalzman
Does this also address Bug 1430393?
https://hg.mozilla.org/mozilla-central/rev/7f9d938235e7
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: